--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animation</title>
   </head>
-  <body></body>
+  <body>
+    <div class="box">
+      <h1>Arifuzzaman</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis sint
+        autem itaque recusandae modi dignissimos, dolorem corporis. Ratione,
+        eligendi mollitia itaque voluptatem dolores facere animi nihil provident
+        quod, iusto fuga.
+      </p>
+    </div>
+  </body>
 </html>
